syntax = "proto3";

package auth;

option go_package = "src/golang";

message RequestGetUsers {
  int32 user_id = 1;
  int32 message_id = 2;
  int64 auth_key = 3;
}

enum UserSex {
  UserSex_MALE = 0;
  UserSex_FEMALE = 1;
}

message User {
  string name = 1;
  string family = 2;
  int32 id = 3;
  int32 age = 4;
  UserSex sex = 5;
}

message RequestGetUsersWithSQLInjection {
  string user_id = 1;
  int32 message_id = 2;
  int64 auth_key = 3;
}

message ResponseGetUsers {
  repeated User users = 1;
  int32 message_id = 2;
}

service Biz {
  rpc get_users(RequestGetUsers) returns (ResponseGetUsers);
  rpc get_users_with_sql_injection(RequestGetUsersWithSQLInjection) returns (ResponseGetUsers);
}